--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-It's an index!
+<h2>General Information</h2>
+<p>
+The github organization - <em> SWC-OSG-Workshop </em> contains the 
+<em> general </em> repository and will hold several worhshop specific repositories. The <em> general </em> repository has the basic learning modules and tools to generate the website front page for the workshops. 
+
+As soon as the workshop date is finalized, create a repo by the name 
+"YYYY-MM-DD", where YYYY is the year, MM is the month and DD is the date of the workshop. 
+
+In your local Desktop or Laptop,  type  the following
+
+git clone https://github.com/SWC-OSG-Workshop/YYYY-MM-DD.git
+
+
+cd YYYY-MM-DD
+
+git checkout -b gh-pages
+
+git remote add general https://github.com/SWC-OSG-Workshop/general.git
+
+git pull origin gh-pages
+
+git remote remove general
+
+Now follow the steps outlined in the README.md file to create the web-site
+for the workshop. 
+
+</p>
+
