--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <h2>General Information</h2>
 <p>
-The github organization - <em> SWC-OSG-Workshop </em> contains the 
-<em> general </em> repository and will hold several worhshop specific repositories. The <em> general </em> repository has the basic learning modules and tools to generate the website front page for the workshops. 
+The <em> SWC-OSG-Workshop </em> is a github organization. Under this organization, we have the course materials for the sofware carpentry and open science grid workshops. 
+</p>
 
+</br> 
+<p>
+<em> general </em> contains the basic learning modules and tools to generate the workshop website. 
+</p> 
+
+</br> 
+
+
+<p>
 As soon as the workshop date is finalized, create a repo by the name 
-"YYYY-MM-DD", where YYYY is the year, MM is the month and DD is the date of the workshop. 
-
-In your local Desktop or Laptop,  type  the following
+"YYYY-MM-DD", where YYYY is the year, MM is the month and DD is the date of the workshop.  In your local Desktop or Laptop,  type  the following
 
 git clone https://github.com/SWC-OSG-Workshop/YYYY-MM-DD.git
 
