--- a/index.html
+++ b/index.html
@@ -1,32 +1,25 @@
 <h2>General Information</h2>
 <p>
-The <em> SWC-OSG-Workshop </em> is a github organization. Under this organization, we have the course materials for the sofware carpentry and open science grid workshops. 
+The <em> SWC-OSG-Workshop </em> is a github organization. 
+Under this organization, we have the course materials for the 
+sofware carpentry and open science grid workshops. 
+The repository - <em> general </em> contains the basic learning modules and necessary tools to set up the workshop front page.
 </p>
 
-</br> 
-<p>
-<em> general </em> contains the basic learning modules and tools to generate the workshop website. 
-</p> 
 
 </br> 
-
-
 <p>
 As soon as the workshop date is finalized, create a repo by the name 
 "YYYY-MM-DD", where YYYY is the year, MM is the month and DD is the date of the workshop.  In your local Desktop or Laptop,  type  the following
+<ul> 
 
-git clone https://github.com/SWC-OSG-Workshop/YYYY-MM-DD.git
-
-
-cd YYYY-MM-DD
-
-git checkout -b gh-pages
-
-git remote add general https://github.com/SWC-OSG-Workshop/general.git
-
-git pull origin gh-pages
-
-git remote remove general
+<li> git clone https://github.com/SWC-OSG-Workshop/YYYY-MM-DD.git
+<li> cd YYYY-MM-DD </li> 
+<li> git checkout -b gh-pages </li> 
+<li> git remote add general https://github.com/SWC-OSG-Workshop/general.git </li> 
+<li> git pull origin gh-pages </li> 
+<li> git remote remove general </li> 
+</ul> 
 
 Now follow the steps outlined in the README.md file to create the web-site
 for the workshop. 
