edit index file

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@ As soon as the workshop date is finalized, create a repo by the name
 <li> git remote remove general </li> 
 </ul> 
 
-Now follow the steps outlined in the README.md file to create the web-site
-for the workshop. 
+To create the front page for the workshop, follow the steps 
+outlined in the README.md file that is located at the <em> gh-pages </em> 
+branch of the newly created YYYY-MM-DD repository. 
 
 </p>
 
