edit index file

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <h2>General Information</h2>
 <p>
 The <em> SWC-OSG-Workshop </em> is a github organization. 
-Under this organization, we have the course materials for the 
-sofware carpentry and open science grid workshops. 
-The repository - <em> general </em> contains the basic learning modules and necessary tools to set up the workshop front page.
+Under this organization, we create repositories that contain the course 
+materials for the sofware carpentry and open science grid workshops. The parent 
+reposityr is <em> general </em>.  The  <em> general </em> repository contains the basic learning modules and necessary tools to set up the workshop front 
+page. Using <em> general </em> as the template, we will generate workshop 
+specific repositories. 
 </p>
 
 
