edit index file

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@ reposityr is <em> general </em>.  The  <em> general </em> repository contains th
 page. Using <em> general </em> as the template, we will generate workshop 
 specific repositories. 
 </p>
-
-
 </br> 
+
+<h2>New Repo for a New Workshop</h2>
 <p>
 As soon as the workshop date is finalized, create a repo by the name 
 "YYYY-MM-DD", where YYYY is the year, MM is the month and DD is the date of the workshop.  In your local Desktop or Laptop,  type  the following
