--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<body>
+
+<h1>  Creating Workshop Specific Repository</h1>
+
+
 <h2>General Information</h2>
 <p>
 The <em> SWC-OSG-Workshop </em> is a github organization. 
 Under this organization, we create repositories that contain the course 
 materials for the sofware carpentry and open science grid workshops. The parent 
-reposityr is <em> general </em>.  The  <em> general </em> repository contains the basic learning modules and necessary tools to set up the workshop front 
-page. Using <em> general </em> as the template, we will generate workshop 
-specific repositories. 
+repositry is <em> general </em> that contains the basic learning modules and necessary tools to set up new workshop website.  Using <em> general </em> as 
+the template, we will generate workshop specific repositories. The generated
+repository needs to have the course materials and the front page of 
+the website for a workshop.   
 </p>
 </br> 
 
@@ -29,3 +37,5 @@ branch of the newly created YYYY-MM-DD repository.
 
 </p>
 
+</body>
+</html>
