--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 The <em> SWC-OSG-Workshop </em> is a github organization. 
 Under this organization, we create repositories that contain the course 
 materials for the sofware carpentry and open science grid workshops. The parent 
-repositry is <em> general </em> that contains the basic learning modules and necessary tools to set up new workshop website.  Using <em> general </em> as 
-the template, we will generate workshop specific repositories. The generated
-repository needs to have the course materials and the front page of 
-the website for a workshop.   
+repositry is <em> general(https://github.com/SWC-OSG-Workshop/general.git) </em> that contains the basic learning modules 
+and necessary tools to set up new workshop website. Using <em> general </em> 
+repo as the template, we will generate workshop specific 
+repositories. The generated repository needs to have the course materials 
+and the front page of the website for a workshop.   
 </p>
 </br> 
 
@@ -32,7 +33,7 @@ As soon as the workshop date is finalized, create a repo by the name
 </ul> 
 
 To create the front page for the workshop, follow the steps 
-outlined in the README.md file that is located at the <em> gh-pages </em> 
+outlined in the README.md file located at the <em> gh-pages </em> 
 branch of the newly created YYYY-MM-DD repository. 
 
 </p>
