--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 The <em> SWC-OSG-Workshop </em> is a github organization. 
 Under this organization, we create repositories that contain the course 
 materials for the sofware carpentry and open science grid workshops. The parent 
-repositry is <em> general(https://github.com/SWC-OSG-Workshop/general.git) </em> that contains the basic learning modules 
+repositry is <a href="https://github.com/SWC-OSG-Workshop/general.git"> <em> general</em></a> that contains the basic learning modules 
 and necessary tools to set up new workshop website. Using <em> general </em> 
 repo as the template, we will generate workshop specific 
 repositories. The generated repository needs to have the course materials 
