--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@ and the front page of the website for a workshop.
 As soon as the workshop date is finalized, create a repo by the name 
 "YYYY-MM-DD", where YYYY is the year, MM is the month and DD is the 
 date of the workshop. The generated repository needs to have the 
-course materials and web content for a workshop. We have all the materials 
-under the general repo. So we clone the general repo first. In your local 
-Desktop or Laptop,  type  the following
+course material and web content for a workshop. Since we have all 
+the materials under the general repo, we copy the course material and web 
+content from the general repo. In your local Desktop or Laptop, type  
+the followings
 <ul> 
 <li> git clone https://github.com/SWC-OSG-Workshop/YYYY-MM-DD.git
 <li> cd YYYY-MM-DD </li> 
@@ -37,6 +38,7 @@ Desktop or Laptop,  type  the following
 <li> git pull general gh-pages </li> 
 <li> git remote remove general </li> 
 </ul> 
+
 
 To create the front page for the workshop, follow the steps 
 outlined in the README.md file located at the <em> gh-pages </em> 
