--- a/index.html
+++ b/index.html
@@ -1,6 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
+   <header class="header">
+      <span id="github-ribbon"><a href="https://github.com/SWC-OSG-Workshop/general.git">Fork me on GitHub</a></span>
+
+<div class="navbar transparent navbar-inverse">
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <a href="../index.html" id="nav-logo" class="pull-left"></a>
+      <div class="nav-collapse collapse pull-right span12">
+        <ul class="nav pull-right">
+          <li id="nav-workshops">
+            <a href="http://swc-osg-workshop.github.io/general/setup.html">Set Up</a>
+
+          </li>
+          <li id="nav-lessons">
+            <a href="http://swc-osg-workshop.github.io/general/contents.html">Lessons</a>
+          </li>
+          <form class="navbar-search" method="get" action="http://www.google.com/search">
+            <input type="hidden" name="sitesearch" value="http://software-carpentry.org" />
+            <input name="q" type="text" class="search-query" placeholder="Search" />
+          </form>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+    </header>
+
 
 <h1>  Creating Workshop Specific Repository</h1>
 
