--- a/index.html
+++ b/index.html
@@ -1,56 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-   <header class="header">
-      <span id="github-ribbon"><a href="https://github.com/SWC-OSG-Workshop/general.git">Fork me on GitHub</a></span>
 
-<div class="navbar transparent navbar-inverse">
-  <div class="navbar-inner">
-    <div class="container">
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-      <a href="../index.html" id="nav-logo" class="pull-left"></a>
-      <div class="nav-collapse collapse pull-right span12">
-        <ul class="nav pull-right">
-          <li id="nav-workshops">
-            <a href="http://swc-osg-workshop.github.io/general/setup.html">Set Up</a>
-
-          </li>
-          <li id="nav-lessons">
-            <a href="http://swc-osg-workshop.github.io/general/contents.html">Lessons</a>
-          </li>
-          <form class="navbar-search" method="get" action="http://www.google.com/search">
-            <input type="hidden" name="sitesearch" value="http://software-carpentry.org" />
-            <input name="q" type="text" class="search-query" placeholder="Search" />
-          </form>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
-    </header>
-
-
-<h1>  Creating Workshop Specific Repository</h1>
-
-
-<h2>General Information</h2>
-<p>
-The <em> SWC-OSG-Workshop </em> is a github organization. 
-Under this organization, we create repositories that contain the course 
-materials for the sofware carpentry and open science grid workshops. The parent 
-repositry is <a href="https://github.com/SWC-OSG-Workshop/general.git"> <em> general</em></a> that contains the basic learning modules 
-and necessary tools to set up new workshop website. Using 
+<h1> Creating Workshop Specific Repository</h1>
+Welcome OSG team. The current page provides guidelines to set up a the documentation and the web-page for the software carpentry workshop. All our 
+documentations for the workshop are hosted at github under the organization 
+<em> SWC-OSG-Workshop </em>. In particular, the repository <a href="https://github.com/SWC-OSG-Workshop/general.git"> contains materials common for all the 
+upcoming or planned future workshops. The materials include the lessons and 
+the content for the front page of the workshop. We will copy  
 <a href="https://github.com/SWC-OSG-Workshop/general.git"><em>general</em></a> 
-repo as the template, we will generate workshop specific 
-repositories. 
-
-The generated repository needs to have the course materials 
-and the front page of the website for a workshop.   
+repo for each new workshop and tweek the materials. 
 </p>
 </br> 
 
